--- a/onchainauth/Dockerfile
+++ b/onchainauth/Dockerfile
@@ -1,29 +1,17 @@
-FROM node:18-alpine AS builder
+FROM node:20
 
+# Set working directory
 WORKDIR /app
 
-COPY package.json package-lock.json ./
+# Install dependencies
+COPY package*.json ./
 RUN npm install
 
+# Copy the rest of your application
 COPY . .
 
-RUN npm run build
-
-
-FROM node:18-alpine AS runner
-
-
-ENV NODE_ENV=production
-
-
-WORKDIR /app
-
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package.json ./package.json
-
-
+# Expose the app on port 3000
 EXPOSE 3000
 
-CMD ["npm", "start"]
+# Start the app
+CMD ["npm", "run", "dev"]
